overflow stopped in body

--- a/css/tags.css
+++ b/css/tags.css
@@ -1,3 +1,6 @@
+html, body{
+    overflow: hidden;
+}
 #content{
     margin: 0 auto;
     width: 1060px;
